# cpp_makefiles

./: .gitignore  README.md
01_single_file/: Makefile  README.md  main.cpp
02_targets_and_deps/: Makefile  README.md  main.cpp  math.cpp
03_variables/: Makefile  README.md  greet.cpp  main.cpp
04_automatic_variables/: Makefile  README.md  calc.cpp  calc.hpp  main.cpp
05_pattern_rules/: Makefile  README.md  main.cpp  vec.cpp  vec.hpp
06_src_include/: Makefile  README.md
06_src_include/include/: counter.hpp
06_src_include/src/: counter.cpp  main.cpp
07_header_deps/: Makefile  README.md
07_header_deps/include/: config.hpp  store.hpp
07_header_deps/src/: main.cpp  store.cpp
08_multiple_targets/: Makefile  README.md
09_static_library/: Makefile  README.md
09_static_library/src/: main.cpp  (+1 more)
10_shared_library/: Makefile  README.md
11_recursive_make/: Makefile  README.md
12_nonrecursive_make/: Makefile  README.md
13_out_of_source/: Makefile  README.md
14_conditionals/: Makefile  README.md
15_testing/: Makefile  README.md
16_make_vs_cmake/: CMakeLists.txt  Makefile  README.md
16_make_vs_cmake/include/: matrix.hpp
16_make_vs_cmake/src/: main.cpp  matrix.cpp
16_make_vs_cmake/tests/: test_matrix.cpp
17_functions/: Makefile  README.md
18_parallel_builds/: Makefile  README.md
19_multiple_executables/: Makefile  README.md
20_debugging_makefiles/: Makefile  README.md
21_eval_dynamic_rules/: Makefile  README.md
22_shell_external_tools/: Makefile  README.md
23_pkg_config/: Makefile  README.md
24_install_target/: Makefile  README.md
(+57 files in other folders)
